# ds

./: .gitignore  AGENTS.md  README.md  pyproject.toml  tokens.json
src/design_system/: __init__.py  manager.py  theme.py
src/design_system/example/: example.py  main.py
tests/: conftest.py  test_design_system.py  test_example_ui.py
